Append access token to request (#842)
* append access token to request

* fixed isLoggedIn beanFactory resolution