@@ -75,7 +75,7 @@ public abstract class AuthorizationService {
 
         if (isUseJWTForClientAuth()) {
             JWSSigner = new JWSSigner(PEMSupport.getInstance().parseKey(getSslParser().getKey().getPrivate().get(router.getResolverMap(), router.getBaseLocation())),
-                    getSslParser().getKey().getCertificates().getFirst().get(router.getResolverMap(), router.getBaseLocation()));
+                    getSslParser().getKey().getCertificates().get(0).get(router.getResolverMap(), router.getBaseLocation()));
         }
 
         setHttpClient(router.getHttpClientFactory().createClient(getHttpClientConfiguration()));
